--- a/index.html
+++ b/index.html
@@ -203,6 +203,113 @@
     </section>
     <!-- Row4 End Here -->
 
+    <!-- Row5 Start Here -->
+    <section id="row5">
+      <div class="container">
+
+        <div class="pricing_section">
+          <div class="row mt-5">
+            <div class="col-md-12">
+              <h2 class="text-center pt-2 pb-2" >Our Pricing</h2>
+              <p class="text-center mb-5">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa, nihil. Ducimus exercitationem quas consectetur? Iusto dolore eos quidem culpa laborum. Nulla exercitationem tenetur nam sint provident quia sunt, voluptate possimus. Voluptatibus vitae rem quibusdam perferendis vero quod blanditiis sunt sed.</p>
+
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-3">
+              <div class="pricing_item">
+                <div class="card shadow">
+                  <div class="card-header">
+                    <h4 class="card-title text-center">55$</h4>
+                  </div>
+                  <div class="card-body">
+                    <ul class="list-group">
+                      <li class="list-group-item">Lorem ipsum dolor sit.</li>
+                      <li class="list-group-item">Lorem ipsum dolor sit.</li>
+                      <li class="list-group-item">Lorem ipsum dolor sit.</li>
+                      <li class="list-group-item">Lorem ipsum dolor sit.</li>
+                      <li class="list-group-item">Lorem ipsum dolor sit.</li>
+                      <li class="list-group-item">Lorem ipsum dolor sit.</li>
+                    </ul>
+                  </div>
+                  <div class="card-footer">
+                    <a href="#" class="btn btn-primary">Order Now</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-3">
+              <div class="pricing_item">
+                <div class="card shadow">
+                  <div class="card-header">
+                    <h4 class="card-title text-center">55$</h4>
+                  </div>
+                  <div class="card-body">
+                    <ul class="list-group">
+                      <li class="list-group-item">Lorem ipsum dolor sit.</li>
+                      <li class="list-group-item">Lorem ipsum dolor sit.</li>
+                      <li class="list-group-item">Lorem ipsum dolor sit.</li>
+                      <li class="list-group-item">Lorem ipsum dolor sit.</li>
+                      <li class="list-group-item">Lorem ipsum dolor sit.</li>
+                      <li class="list-group-item">Lorem ipsum dolor sit.</li>
+                    </ul>
+                  </div>
+                  <div class="card-footer">
+                    <a href="#" class="btn btn-primary">Order Now</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-3">
+              <div class="pricing_item">
+                <div class="card shadow">
+                  <div class="card-header">
+                    <h4 class="card-title text-center">55$</h4>
+                  </div>
+                  <div class="card-body">
+                    <ul class="list-group">
+                      <li class="list-group-item">Lorem ipsum dolor sit.</li>
+                      <li class="list-group-item">Lorem ipsum dolor sit.</li>
+                      <li class="list-group-item">Lorem ipsum dolor sit.</li>
+                      <li class="list-group-item">Lorem ipsum dolor sit.</li>
+                      <li class="list-group-item">Lorem ipsum dolor sit.</li>
+                      <li class="list-group-item">Lorem ipsum dolor sit.</li>
+                    </ul>
+                  </div>
+                  <div class="card-footer">
+                    <a href="#" class="btn btn-primary">Order Now</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-3">
+              <div class="pricing_item">
+                <div class="card shadow">
+                  <div class="card-header">
+                    <h4 class="card-title text-center">55$</h4>
+                  </div>
+                  <div class="card-body">
+                    <ul class="list-group">
+                      <li class="list-group-item">Lorem ipsum dolor sit.</li>
+                      <li class="list-group-item">Lorem ipsum dolor sit.</li>
+                      <li class="list-group-item">Lorem ipsum dolor sit.</li>
+                      <li class="list-group-item">Lorem ipsum dolor sit.</li>
+                      <li class="list-group-item">Lorem ipsum dolor sit.</li>
+                      <li class="list-group-item">Lorem ipsum dolor sit.</li>
+                    </ul>
+                  </div>
+                  <div class="card-footer">
+                    <a href="#" class="btn btn-primary">Order Now</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Row5 End Here -->
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
