--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/fontawesome.min.css" integrity="sha512-SgaqKKxJDQ/tAUAAXzvxZz33rmn7leYDYfBP+YoMRSENhf3zJyx3SBASt/OfeQwBHA1nxMis7mM3EV/oYT6Fdw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <!-- Row1 Start Here -->
@@ -352,6 +353,62 @@
     </section>
     <!-- Row6 End Here -->
 
+    <!-- Row7 Start Here -->
+    <section id="row7">
+      <div class="container">
+        <div class="work_section">
+          <div class="row">
+            <div class="col-md-12">
+              <h2 class="text-center pb-3 pt-3">Our Latest Work</h2>
+              <p class="text-center p-5">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugit alias quisquam rem iusto, magni recusandae officia minima culpa eum repudiandae reprehenderit molestiae quo facere placeat omnis corporis possimus quam pariatur.</p>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-12">
+    
+<div id="filters" class="button-group">  <button class="button is-checked" data-filter="*">All Works</button>
+  <button class="button" data-filter=".metal">Web Design</button>
+  <button class="button" data-filter=".transition">Web Development</button>
+  <button class="button" data-filter=".alkali, .alkaline-earth">Apps Development</button>
+  <button class="button" data-filter=":not(.transition)">Illustration</button>
+  <button class="button" data-filter=".metal:not(.transition)">Graphics Design</button>
+  <button class="button" data-filter="numberGreaterThan50">UI Design</button>
+  <button class="button" data-filter="ium">Logo Design</button>
+</div>
+
+
+<div class="grid">
+  <div class="element-item transition metal " data-category="transition">
+    <img src="https://img1.wsimg.com/cdn/Image/All/All/1/en-US/0dfcc07b-259c-4c0f-8e9f-3ac90e6c46ae/gd-websitebuilder-marquee-desktop.jpg" alt="">
+  </div>
+  <div class="element-item metalloid " data-category="metalloid">
+    <img src="https://crazydomains.dreamscape.cloud/production/public/src/@master/containers/WebBuilderLandingPage/static/Hero/hero_768.webp?72da5c" alt="">
+  </div>
+  <div class="element-item post-transition metal " data-category="post-transition">
+    <img src="https://fiverr-res.cloudinary.com/f_auto,q_auto/v1/attachments/generic_asset/asset/f629b1d7ea75a51e7f2badb911c480fa-1665306742078/WEBSITE%20BUILDER.jpeg" alt="">
+  </div>
+  <div class="element-item post-transition metal " data-category="post-transition">
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSFVuvFJaY4IN8ZcAsY6KeMITwcr6IClMSV3Ru5BusgVZqHzYmMslRj9HSPg1tdsKSosP0&usqp=CAU" alt="">
+  </div>
+  <div class="element-item transition metal " data-category="transition">
+    <img src="https://img1.wsimg.com/cdn/Image/All/All/1/en-US/0dfcc07b-259c-4c0f-8e9f-3ac90e6c46ae/gd-websitebuilder-marquee-desktop.jpg" alt="">
+  </div>
+  <div class="element-item alkali metal " data-category="alkali">
+    <img src="https://blog-cdn.quarkly.io/2023/02/14-best-website-builder-for-small-business.png" alt="">
+  </div>
+  
+</div>
+
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Row7 End Here -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="js/isotop-pakgd.min.js"></script>
+    <script src="js/isotop.js"></script>
 </body>
 </html>
