--- a/index.html
+++ b/index.html
@@ -406,6 +406,38 @@
       </div>
     </section>
     <!-- Row7 End Here -->
+
+    <!-- Row8 Start Here -->
+    <section id="row8">
+      <div class="container">
+        <div class="contact_section">
+          <div class="row ">
+           
+            <div class="col-md-8 offset-2 shadow p-5">
+              <form action="">
+                <div class="form-item">
+                  <label for="" class="form-label">Name</label>
+                  <input type="text" class="form-control">
+                </div>
+                <div class="form-item">
+                  <label for="" class="form-label">Email</label>
+                  <input type="email" class="form-control">
+                </div>
+                <div class="form-item">
+                  <label for="" class="form-label">Message</label>
+                 <textarea name="" id="" cols="30" rows="5" class="form-control"></textarea>
+                </div>
+                <div class="form-item">
+                  <br>
+                  <button class="btn btn-primary">Submit</button>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Row8 End Here -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="js/isotop-pakgd.min.js"></script>
